Release 24w34a (snapshot)