@@ -1,97 +1,69 @@
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import com.google.common.collect.ImmutableMap.Builder;
-import com.mojang.brigadier.CommandDispatcher;
-import com.mojang.datafixers.util.Pair;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonParseException;
 import com.mojang.logging.LogUtils;
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.util.List;
+import com.mojang.serialization.JsonOps;
+import java.util.Collection;
 import java.util.Map;
-import java.util.Optional;
-import java.util.Map.Entry;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionException;
-import java.util.concurrent.Executor;
+import javax.annotation.Nullable;
 import org.slf4j.Logger;
 
-public class alp implements aum {
-   private static final Logger b = LogUtils.getLogger();
-   public static final ala<ka<ih<et>>> a = ala.a(alb.b("function"));
-   private static final aku c = new aku(lv.c(a), ".mcfunction");
-   private volatile Map<alb, ih<et>> d = ImmutableMap.of();
-   private final axj<ih<et>> e = new axj<>(this::a, lv.d(a));
-   private volatile Map<alb, List<ih<et>>> f = Map.of();
-   private final int g;
-   private final CommandDispatcher<et> h;
+public class alp extends auy {
+   private static final Logger a = LogUtils.getLogger();
+   private static final Gson b = new GsonBuilder().create();
+   private Map<alc, ag> c = Map.of();
+   private al d = new al();
+   private final jp.a e;
 
-   public Optional<ih<et>> a(alb $$0) {
-      return Optional.ofNullable(this.d.get($$0));
+   public alp(jp.a $$0) {
+      super(b, lv.c(lv.bg));
+      this.e = $$0;
    }
 
-   public Map<alb, ih<et>> a() {
+   protected void a(Map<alc, JsonElement> $$0, aut $$1, bod $$2) {
+      ala<JsonElement> $$3 = this.e.a(JsonOps.INSTANCE);
+      Builder<alc, ag> $$4 = ImmutableMap.builder();
+      $$0.forEach(($$2x, $$3x) -> {
+         try {
+            af $$4x = (af)af.a.parse($$3, $$3x).getOrThrow(JsonParseException::new);
+            this.a($$2x, $$4x);
+            $$4.put($$2x, new ag($$2x, $$4x));
+         } catch (Exception var6x) {
+            a.error("Parsing error loading custom advancement {}: {}", $$2x, var6x.getMessage());
+         }
+      });
+      this.c = $$4.buildOrThrow();
+      al $$5 = new al();
+      $$5.a(this.c.values());
+
+      for (ah $$6 : $$5.b()) {
+         if ($$6.b().b().c().isPresent()) {
+            at.a($$6);
+         }
+      }
+
+      this.d = $$5;
+   }
+
+   private void a(alc $$0, af $$1) {
+      azj.a $$2 = new azj.a();
+      $$1.a($$2, this.e.c());
+      $$2.b().ifPresent($$1x -> a.warn("Found validation problems in advancement {}: \n{}", $$0, $$1x));
+   }
+
+   @Nullable
+   public ag a(alc $$0) {
+      return this.c.get($$0);
+   }
+
+   public al a() {
       return this.d;
    }
 
-   public List<ih<et>> b(alb $$0) {
-      return this.f.getOrDefault($$0, List.of());
-   }
-
-   public Iterable<alb> b() {
-      return this.f.keySet();
-   }
-
-   public alp(int $$0, CommandDispatcher<et> $$1) {
-      this.g = $$0;
-      this.h = $$1;
-   }
-
-   @Override
-   public CompletableFuture<Void> a(aum.a $$0, aus $$1, bny $$2, bny $$3, Executor $$4, Executor $$5) {
-      CompletableFuture<Map<alb, List<axj.a>>> $$6 = CompletableFuture.supplyAsync(() -> this.e.a($$1), $$4);
-      CompletableFuture<Map<alb, CompletableFuture<ih<et>>>> $$7 = CompletableFuture.<Map<alb, auq>>supplyAsync(() -> c.a($$1), $$4).thenCompose($$1x -> {
-         Map<alb, CompletableFuture<ih<et>>> $$2x = Maps.newHashMap();
-         et $$3x = new et(es.a, eye.c, eyd.a, null, this.g, "", xc.a, null, null);
-
-         for (Entry<alb, auq> $$4x : $$1x.entrySet()) {
-            alb $$5x = $$4x.getKey();
-            alb $$6x = c.b($$5x);
-            $$2x.put($$6x, CompletableFuture.supplyAsync(() -> {
-               List<String> $$3xx = a($$4x.getValue());
-               return ih.a($$6x, this.h, $$3x, $$3xx);
-            }, $$4));
-         }
-
-         CompletableFuture<?>[] $$7x = $$2x.values().toArray(new CompletableFuture[0]);
-         return CompletableFuture.allOf($$7x).handle(($$1xx, $$2xx) -> $$2x);
-      });
-      return $$6.thenCombine($$7, Pair::of).thenCompose($$0::a).thenAcceptAsync($$0x -> {
-         Map<alb, CompletableFuture<ih<et>>> $$1x = (Map<alb, CompletableFuture<ih<et>>>)$$0x.getSecond();
-         Builder<alb, ih<et>> $$2x = ImmutableMap.builder();
-         $$1x.forEach(($$1xx, $$2xx) -> $$2xx.handle(($$2xxx, $$3x) -> {
-               if ($$3x != null) {
-                  b.error("Failed to load function {}", $$1xx, $$3x);
-               } else {
-                  $$2x.put($$1xx, $$2xxx);
-               }
-
-               return null;
-            }).join());
-         this.d = $$2x.build();
-         this.f = this.e.a((Map<alb, List<axj.a>>)$$0x.getFirst());
-      }, $$5);
-   }
-
-   private static List<String> a(auq $$0) {
-      try {
-         List var2;
-         try (BufferedReader $$1 = $$0.e()) {
-            var2 = $$1.lines().toList();
-         }
-
-         return var2;
-      } catch (IOException var6) {
-         throw new CompletionException(var6);
-      }
+   public Collection<ag> b() {
+      return this.c.values();
    }
 }
